# irrbull

./: .gitignore  CMakeLists.txt  README.md  TODO  gdbrebuild.sh  rebuild.sh
lib/bullet-2.81-rev2613/: Makefile  config.status  libtool
lib/bullet-2.81-rev2613/Demos/: Makefile
lib/bullet-2.81-rev2613/Extras/: Makefile
lib/bullet-2.81-rev2613/autom4te.cache/: traces.0
lib/bullet-2.81-rev2613/buildproj/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
lib/bullet-2.81-rev2613/src/: Bullet-C-API.lo  Makefile  SphereTriangleDetector.lo  btActivatingCollisionAlgorithm.lo  btAlignedAllocator.lo  btAxisSweep3.lo  btBox2dBox2dCollisionAlgorithm.lo  btBox2dShape.lo  btBoxBoxCollisionAlgorithm.lo  btBoxBoxDetector.lo  btBoxShape.lo  btBroadphaseProxy.lo  btBvhTriangleMeshShape.lo  btCapsuleShape.lo  btCollisionAlgorithm.lo  btCollisionDispatcher.lo  btCollisionObject.lo  btCollisionShape.lo  btCollisionWorld.lo  btCompoundCollisionAlgorithm.lo  btCompoundShape.lo  btConcaveShape.lo  btConeShape.lo  btConeTwistConstraint.lo  btContactConstraint.lo  btContinuousConvexCollision.lo  btConvex2dConvex2dAlgorithm.lo  btConvex2dShape.lo  btConvexCast.lo  btConvexConcaveCollisionAlgorithm.lo  btConvexConvexAlgorithm.lo  btConvexHull.lo  btConvexHullComputer.lo  btConvexHullShape.lo  btConvexInternalShape.lo  btConvexPointCloudShape.lo  (+95 more)
media/: abarba.3ds  abarba.blend  abarba.blend1  abarba.mtl  arbol.blend  arbol.blend1  arbol.blend2  arbol.mtl
media/scripts/: shaderlist.txt~
script/: gdbrebuild.sh  rebuild.py  rebuild.sh  rmrf.py
src/: .CEngine.cpp.swp  .CEngine.hpp.swp  .CEntityController.cpp.swp  .CGame.cpp.swp  .CGame.hpp.swp  .CGameObjectManager.cpp.swp  .CGameObjectManager.hpp.swp  .CMakeLists.txt.swp  .GOCamera.cpp.swp  .GOCamera.hpp.swp  .GOEntity.cpp.swp  .GOEntity.hpp.swp  .GOEntityController.cpp.swp  .GOEntityController.hpp.swp  .basura.cpp.swp  .common.h.swp  .main.cpp.swp  CDebugDraw.hpp  CEngine.cpp  CEngine.hpp  CEntity.cpp  CEntity.hpp  CEntityController.cpp  CEntityController.hpp  CEventReceiver.cpp  CEventReceiver.hpp  CGame.cpp  CGame.hpp  CGameObjectManager.cpp  CGameObjectManager.hpp  CMakeLists.txt  CPhysics.cpp  CPhysics.hpp  CPlayer.hpp  GOEntity.cpp  GOEntity.hpp  GOEntityController.cpp  GOEntityController.hpp  GOIAController.cpp  IGameObject.cpp  (+5 more)
src/framework/: CEngine.cpp  CEngine.hpp  common.h
src/framework/game/: CGame.cpp  CGame.hpp  IScreen.cpp  IScreen.hpp
src/framework/game/gameobject/: CGameObjectManager.hpp
src/framework/input/: CEventReceiver.hpp
src/framework/physics/: CDebugDraw.hpp  CPhysics.cpp  CPhysics.hpp
src/game/test/: CGameScreen.hpp  CScreen.hpp  main.cpp
src/game/test/gameobject/: GOCamera.cpp  GOCamera.hpp  GOEntity.cpp  GOEntity.hpp  GOEntityController.cpp  GOEntityController.hpp  GOIAController.hpp
(+387 files in other folders)
